--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,4 +1,3 @@
-<!-- zhl20160408 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -8,14 +7,14 @@
 	<meta name="Copyright" content="Tencent">
 	<meta name="Description" content="">
 	<meta name="Keywords" content="腾讯游戏">
-	<title>grunt_demo - a grunt test project</title>
+	<title>projA - a grunt test project</title>
 	<link href="../css/base.css" rel="stylesheet" />
 	<link href="../css/index.css" rel="stylesheet" />
 	<!-- 页面设计：xxx | 页面制作：xxx | 创建：xxxx-xx-xx|  团队博客：http://tgideas.qq.com/ -->
 </head>
 <body>
 
-<div class="grunt_demo">
+<div class="projA">
 	<h3>H3 obejct here</h3>
 	<p>PPPPPPPPPPPP</p>
 	<ul class="hello">
