--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,26 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="robots" content="all">
-	<meta name="author" content="Tencent-TGideas">
+	<meta name="author" content="zhl20160411">
 	<meta name="Copyright" content="Tencent">
 	<meta name="Description" content="">
-	<meta name="Keywords" content="腾讯游戏">
-	<title>projA - a grunt test project</title>
+	<meta name="Keywords" content="zhl20160411">
+	<title>grunt_demo zhltest</title>
 	<link href="../css/base.css" rel="stylesheet" />
 	<link href="../css/index.css" rel="stylesheet" />
 	<!-- 页面设计：xxx | 页面制作：xxx | 创建：xxxx-xx-xx|  团队博客：http://tgideas.qq.com/ -->
 </head>
 <body>
 
-<div class="projA">
-	<h3>H3 obejct here</h3>
-	<p>PPPPPPPPPPPP</p>
+<div class="grunt_demo">
+	<h3>aa</h3>
+	<p>bb</p>
 	<ul class="hello">
-		<li><a href="">item-1</a></li>
-		<li><a href="">item-2</a></li>
-		<li><a href="">item-3</a></li>
-		<li><a href="">item-4</a></li>
-		<li><a href="">item-5</a></li>
+		<li><a href="">cc</a></li>
+		<li><a href="">dd</a></li>
+		<li><a href="">ee</a></li>
+		<li><a href="">ff</a></li>
+		<li><a href="">gg</a></li>
 	</ul>
 </div>
 
